feat: cczu-无心 v1.2.0 深度竞赛数据挖掘扩展
- 新增教务处、校团委、创新创业学院 4 个校级职能部门爬虫源
- 关键词库从 12 个扩展到 33 个，覆盖蓝桥杯/数学建模/ACM 等具体赛事
- 新增比赛级别检测（国赛/省赛/校赛）、截止日期和组织单位智能提取
- Competition 实体新增 level/deadline/organizer 字段
- 前端新增级别筛选下拉和截止日期显示，级别 badge 按颜色区分

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -65,6 +65,12 @@
                         </select>
                     </div>
                     <div class="field">
+                        <label for="level">LEVEL</label>
+                        <select id="level">
+                            <option value="">全部级别</option>
+                        </select>
+                    </div>
+                    <div class="field">
                         <label for="startDate">FROM</label>
                         <input type="date" id="startDate">
                     </div>
