revert: 回退 v2 功能，恢复 v1.3.1 并保留备案信息
- 回退竞赛时间线、排序、管理后台等 v2 全部功能
- 保留 ICP 备案与公安备案标识

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -114,6 +114,15 @@
                     数据来源 常州大学多学院公告 · 每 15 分钟自动更新
                 </div>
             </div>
+            <div class="beian-info" style="margin-top: 15px; padding-bottom: 15px; font-size: 12px; display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 15px;">
+                <a href="https://beian.miit.gov.cn/" target="_blank" style="color: #939393; text-decoration: none;">
+                    苏ICP备2025228079号-1
+                </a>
+                <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32041202003906" target="_blank" style="display: flex; align-items: center; color: #939393; text-decoration: none;">
+                    <img src="images/beian_icon.png" style="width: 16px; height: 16px; margin-right: 5px;" alt="公安备案图标">
+                    <span>苏公网安备 32041202003906号</span>
+                </a>
+            </div>
         </div>
     </footer>
 
